--- a/app/src/main/res/values/number_of_ingridients_for_recipes.xml
+++ b/app/src/main/res/values/number_of_ingridients_for_recipes.xml
@@ -1048,4 +1048,516 @@
 	200 г. лука\n
 </string>
 
+<string name="number_of_ingredients_for_baton_s_sirom_i_chesnokom">
+	Батон (багет)\n
+	Сыр твердый - 100г.\n
+	Масло сливочное - 100г.\n
+	Чеснок - 3 зубчика\n
+	Петрушка (или любая зелень) - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_zapechennaya_kartoshka_s_sirom">
+	Картофель - 1 кг. (молодой)\n
+	Сыр твердый - 200г.\n
+	Масло сливочное - 80г.\n
+	Зелень - пучок\n
+	Соль - 1/2 ч.л.\n
+</string>
+
+<string name="number_of_ingredients_for_sirnie_lepeshki">
+	Мука - 2 стакана\n
+	Кефри - 1 стакан\n
+	Соль - 1/2 ч.л.\n
+	Сахар - 1/2 с.л.\n
+	Сода - 1/2 ч.л.\n
+	Сыр тертый - 1 стакан\n
+	Ветчина - 250 г.\n
+</string>
+
+<string name="number_of_ingredients_for_kanape_s_krasnoy_ikroy">
+	Творожный сыр (мягкий творог) - 150г.\n
+	Икра красная - 100г.\n
+	Батон\n
+	Огурцы свежие - 2 шт.\n
+	Зелень (укроп) - пучок\n
+</string>
+
+<string name="number_of_ingredients_for_pizza_dlya_lenivih">
+	Сыр - 300г.\n
+	Слоеное тесто - 500г.\n
+	Грибы - по вкусу\n
+	Томатная паста (кетчуп) - по вкусу\n
+	Ветчина - по вкусу\n
+	Зелень - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_sirnaya_solomka">
+	Сыр твердый - 150г.\n
+	Мука пшеничная - 1 стакан\n
+	Масло сливочное - 80г.\n
+	молоко - 4 ст.л.\n
+	Соль - по вкусу\n
+	Лимонная цедра, тмин, кунжут - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_jareny_v_duhovke_kartofel_s_sirom">
+	Картофель - 6 шт.\n
+	Масло растительное (лучше оливковое) - 4 ст.л.\n
+	Чесночный порошок - 1/2 ч.л.\n
+	Соль - 3/4 ч.л.\n
+	Паприка - 1,5 ч.л.\n
+	Молотый черный перец - 1/4 ч.л.\n
+	Сыр твердый - 80г.\n
+</string>
+
+<string name="number_of_ingredients_for_kartofel_dofin_pod_sirom">
+	Картофель - 1 кг.\n
+	Яйцо - 1 шт.\n
+	Молоко - 1 стакан\n
+	Сыр твердый - 200 г.\n
+	Чеснок - 1 зубчик\n
+	Масло сливочное - 50 г.\n
+	Перец черный - по вкусу\n
+	Приправы - 2 ч.л.\n
+</string>
+
+<string name="number_of_ingredients_for_francyzskie_tosti">
+	Яйца - 5 шт.\n
+	Молоко + сливки - 3 ст.л.\n
+	Соль - 1 ч.л.\n
+	Перец молотый - 2 ч.л.\n
+	Зеленый лук - 1,5 ст.л.\n
+	Кинза - 1,5 ст.л.\n
+	Растительное и сливочное масло - по вкусу\n
+	Хлеб или батон - 8 кусков.\n
+</string>
+
+<string name="number_of_ingredients_for_kart_pyre_s_pomidorami">
+	Картофель - 1 кг.\n
+	Молоко - 400 мл.\n
+	Сыр - 300 г.\n
+	Лук - 200г.\n
+	Масло сливочное (для жарки) - 10 г.\n
+	Чеснок - 2-3 зубчика\n
+	Помидор - 1 шт.\n
+	Соль, перец, зелень - по вкусу.\n
+</string>
+
+<string name="number_of_ingredients_for_krabovie_trubochki">
+	Яйцо - 1 шт.\n
+	Сыр твердый - 50 г.\n
+	Кальмары консерварованные - 120 г.\n
+	Крабовые палочки - 12 шт.\n
+	Майонез - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_pizza_so_smetanoy_vetchinoy_lukom">
+	Сыр - 100 г.\n
+	Ветчина (или бекон) - 100 г.\n
+	Тесто для писсы (либо слоеное) - 120 г.\n
+	Сметана - 2 ст.л.\n
+	Зеленый лук - пучок\n
+</string>
+
+<string name="number_of_ingredients_for_sirniy_sup_s_shampinonami">
+	Вода - 2 л.\n
+	2 плавленных сырка (желательно с грибным вкусом)\n
+	Картовель - 3-4 шт. (небольшие)\n
+	Морковь - 1 шт.\n
+	Лук репчатый - 1 шт.\n
+	Шампиньоны - 250 г.\n
+	Соль - по вкусу\n
+	Специи - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_sirnie_blini">
+	Яйца - 3 шт.\n
+	Сыр - 300г.\n
+	Молоко - 3 ст.\n
+	Мука - 2,5 стакана\n
+	Соль - щепотка\n
+	Подсолнечное масло - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_duhovie_kotletki">
+	Фарш (свинина и говядина)\n
+	Небольшой кусок хлеба (батона)\n
+	Молоко\n
+	Луковица\n
+</string>
+
+<string name="number_of_ingredients_for_pomidori_s_sirom_i_chesnokom">
+	Сыр твердый - 200 г.\n
+	Помидоры - 4 шт.\n
+	Майонез - по вкусу\n
+	Чиснок - по вкусу\n
+	Зелень - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_kuritsa_zapechennya_pod_sirom">
+	Куриные бедрышки - 2 шт.\n
+	Сыр твердый - по вкусу\n
+	Зелен, чеснок - по вкусу\n
+	Майонез - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_kabachki_zapechenniye_s_pomidorami_i_sirom">
+	Кабачки (небольшие) - 1-2 шт.\n
+	Помидоры - 2-3 шт.\n
+	Сыр твердый - 50 г.\n
+	Соль, перец - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_sloenie_palochki_s_vetchinoy">
+	Тесто слоеное дрожжевое - 250 г.\n
+	Ветчина сыровяленая - 35 г.\n
+	Яйцо куриное - 1 шт.\n
+</string>
+
+<string name="number_of_ingredients_for_hleb_s_sirom_na_grile">
+	Хлеб (батон) - 5-6 небольших булок\n
+	Мягкий сливочный сыр - 200 г.\n
+</string>
+
+<string name="number_of_ingredients_for_goryachiy_buterbrod">
+	Сыр - 100 г.\n
+	Маслины - 2 шт.\n
+	Помидоры (мелкие) - 4 шт.\n
+	Сосиски - 2 шт.\n
+	Майонез - 2 ст.л.\n
+	Хлеб (батон) - 2 ломтика\n
+</string>
+
+<string name="number_of_ingredients_for_sandwitch_s_semgoy_i_slivochnim_sirom">
+	Семга - 100 г.\n
+	Хлеб для сэндвичей\n
+	Сыр сливочный - 1 упаковка\n
+	Молодой зеленый лук - пучок\n
+	Сыр твердый - 50 г.\n
+	Сок 1/2 лимона\n
+	Соль - щепотка\n
+	Перец черный свежемолотый - щепотка\n
+</string>
+
+<string name="number_of_ingredients_for_yaponsky_omlet_s_kuritsey">
+	Лук репчатый - 1 головка\n
+	Филе куриное - 300 г.\n
+	Рим - 1/2 стакана\n
+	Яйцо куриное - 3 шт.\n
+	Соус соевый - 6 ст.л.\n
+	Сахар - 2 ст.л.\n
+</string>
+
+<string name="number_of_ingredients_for_salat_iz_morkovi_s_sirom">
+	Морковь - 500 г.\n
+	Сыр нежирный - 300 гр.\n
+	Чеснок - по вкусу\n
+	Нежирная сметана или йогурт - 50 гр.\n
+</string>
+
+<string name="number_of_ingredients_for_italian_pizza_s_salyami">
+	Тесто для пиццы - 500 г.\n
+	Сыр - 200 г.\n
+	Салями (или другая колбаса) - 150 г.\n
+	Перец болгарский - 1 шт.\n
+	Соус томатный (кетчуп) - 3 ст.л.\n
+	Маслины - 10 шт.\n
+</string>
+
+<string name="number_of_ingredients_for_govyadina_s_sirom_i_smetanoy">
+	Говяжья вырезка - 800 г.\n
+	Сыр - 100 г.\n
+	Сметана - 100 г.\n
+	Специи - по вкусу\n
+	Соль - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_classic_french_omlet">
+	Масло сливочное - 50 г.\n
+	Яйца куриные - 3 шт.\n
+	Специи (соль, белый перец) - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_vareni_omlet">
+	Яйца куриные - 3 шт.\n
+	Молоко - 2/3 стакана\n
+	Соль - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_sitniy_zavtrak_iz_yaits">
+	Яйцо (вареное) - 6 шт.\n
+	Сметана - 6 ст.л.\n
+	Сыр твердый - 100 г.\n
+	Горчица - 3 ст.л.\n
+</string>
+
+<string name="number_of_ingredients_for_cholate_omlet">
+	Шоколад - 400 г.\n
+	Масло сливочное - 100 г.\n
+	Яйцо - 5 шт.\n
+</string>
+
+<string name="number_of_ingredients_for_omlet_iz_detskogo_sada">
+	Яйцо - 5 шт.\n
+	Молоко - 250 мл.\n
+	Соль - 0.5 ст.л.\n
+	Масло сливочное - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_soup_pure_is_kuritsi">
+	1 курица\n
+	4 ст. ложки масла\n
+	2 ст. ложки муки\n
+	2 яйца\n
+	1 стакан сливок или молока\n
+</string>
+
+<string name="number_of_ingredients_for_soup_pure_iz_krabov">
+	1 банка консервированных крабов\n
+	4 ст. ложки масла\n
+	2 ст. ложки муки\n
+	4 стакана молока\n
+</string>
+
+<string name="number_of_ingredients_for_soup_pure_iz_kukuruzi">
+	1 банка консервированной кукурузы \n
+	2 ст. ложки муки\n
+	4 ст. ложки масла\n
+	3 стакана молока\n
+</string>
+
+
+<string name="number_of_ingredients_for_sup_pure_iz_fasoli_i_goroha">
+	400 г фасоли или гороха\n
+	1 шт. моркови\n
+	1 луковица\n
+	4 ст. ложки масла\n
+	2 стакана молока\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_risa">
+	1 стакан риса\n
+	3–4 стакана молока\n
+	3 ст. ложки масла\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_zelenogo_goroshka">
+	800 г консервированного горошка\n
+	3 ст. ложки масла\n
+	2 ст. ложки муки\n
+	4 стакана молока\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_shampinionov">
+	600 г свежих шампиньонов\n
+	2 ст. ложки муки\n
+	4 стакана молока\n
+	4 ст. ложки масла\n
+	1 шт. моркови\n
+	1 луковица\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_salata">
+	800 г зеленого салата\n
+	3 ст. ложки сливочного масла\n
+	2 ст. ложки муки\n
+	5–6 стаканов молока\n
+	1 стакан сливок\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_pomodorov">
+	750 г помидоров\n
+	4 ст. ложки масла\n
+	2 ст. ложки муки\n
+	4 стакана молока\n
+	1 чайную ложку сахара\n
+	2 ст. ложки риса\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_ovoshchei">
+	150 г моркови\n
+	 150 г репы\n
+	 200 г. картофеля\n
+	100 г лука-порея\n
+	3/4 стакана риса\n
+	100 г горошка\n
+	3 ст. ложки масла\n
+	2 стакана молока\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_sparji">
+	800 г спаржи\n
+	4 ст. ложки масла\n
+	2 ст. ложки муки\n
+	4 стакана молока\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_tsvetnoi_kapusti">
+	Капусты цветной — 100 гр\n
+	картофеля — 100 гр\n
+	риса — 20 гр.\n
+	молока — 100 гр.\n
+	масла сливочного — 10 гр.\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_struchkov">
+	600–700 стручков фасоли\n
+	3 ст. ложки масла\n
+	500 г картофеля\n
+	2 стакана молока\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_morkovi">
+	800 г моркови\n
+	3/4 стакана риса\n
+	3 ст. ложки масла\n
+	2 стакана молока\n
+	1 чайную ложку сахара\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_tikvi">
+	800 г тыквы\n
+	150 г гренков \n
+	300 г картофеля\n
+	4–5 стаканов молока\n
+	3 ст. ложки масла\n
+	2 чайных ложки сахара\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_kartofelya">
+	1 кг картофеля\n
+	2–3 стакана молока\n
+	3 ст. ложки сливочного масла\n
+	3 стебля лука-порея\n
+</string>
+
+<string name="number_of_ingredients_for_kurini_bulion">
+	1 курица\n
+	1 шт. моркови\n
+	петрушка\n
+	1 луковица\n
+</string>
+
+<string name="number_of_ingredients_for_sup_molohci_s_hlopiami">
+	1 л молока\n
+	1 стакан овсяных хлопьев\n
+	1 чайную ложку сахара\n
+	1 ст. ложку масла\n
+</string>
+
+<string name="number_of_ingredients_for_sup_molochi_s_kortofelimi_kletskami">
+	1 л молока\n
+	3–4 шт. картофеля\n
+	2 яйца\n
+	3–4 ст. ложки муки\n
+	1 ст. ложку масла\n
+</string>
+
+<string name="number_of_ingredients_for_sup_molochni_s_perlovoy_krupoy">
+	1 л молока\n
+	4–5 ст. ложек перловой крупы\n
+	1 ст. ложку масла\n
+	1 чайную ложку сахара\n
+</string>
+
+<string name="number_of_ingredients_for_molochnaya_lapsha">
+	1 л молока\n
+	50 г лапши\n
+	1 ст. ложку масла\n
+	1 чайную ложку сахара\n
+</string>
+
+<string name="number_of_ingredients_for_sup_molochni_risov">
+	1 л молока\n
+	4 ст. ложки риса\n
+	1 ст. ложку масла\n
+	1 чайную ложку сахара\n
+</string>
+
+<string name="number_of_ingredients_for_sup_iz_smorodini_c_mankoi">
+	300 г смородины\n
+	2 ст. ложки манной крупы\n
+	1 стакан молока\n
+	1/2 стакана сахара\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_yablok">
+	500 г яблок\n
+	200 г. булки\n
+	1/2 стакана сахара\n
+	2 ст. ложки риса\n
+</string>
+
+<string name="number_of_ingredients_for_sup_iz_sushenih_frucktov">
+	200 г. сухих фруктов\n
+	50 г картофельной муки\n
+</string>
+
+<string name="number_of_ingredients_for_sup_pure_iz_abrikosov">
+	400 г абрикосов\n
+	1/2 стакана сахара\n
+	1 ст. ложку картофельной муки\n
+	1/2 стакана риса\n
+	4 ст. ложки сметаны\n
+</string>
+
+<string name="number_of_ingredients_for_sup_iz_abrikosov_i_yablock">
+	500 г свежих абрикосов\n
+	500 г яблок\n
+	3 ст. ложки сахара\n
+	2 чайных ложки картофельной муки\n
+</string>
+
+<string name="number_of_ingredients_for_sup_iz_klukvi_i_yablok">
+	 300 г клюквы\n
+	500 г яблок\n
+	 1 стакан сахара\n
+	1 ст. ложку картофельной муки\n
+</string>
+
+<string name="number_of_ingredients_for_sup_iz_vishen_s_risom">
+	300 г вишен\n
+	4–5 ст. ложек риса\n
+	1/2 стакана сахара\n
+</string>
+
+<string name="number_of_ingredients_for_sup_iz_vishen_s_varenikami">
+	600 г вишен\n
+	1 стакан муки пшеничной\n
+	1/2 стакана сахара\n
+	2 яйца\n
+</string>
+
+<string name="number_of_ingredients_for_sup_holodes">
+	1 л хлебного кваса\n
+	500 г молодой свеклы с ботвой\n
+	2 свежих огурца\n
+	75 г зеленого лука\n
+	2 яйца\n
+	2 ст. ложки сметаны\n
+	1 чайную ложку сахара\n
+</string>
+
+<string name="number_of_ingredients_for_borshch_holodni">
+	500 г свеклы\n
+	200 г. картофеля\n
+	2 свежих огурца\n
+	75 г зеленого лука\n
+	2 яйца\n
+	2 ст. ложки сметаны\n
+	1 чайную ложку сахара\n
+</string>
+
+<string name="number_of_ingredients_for_okroshka_ovoshnaya">
+	1 л. хлебного кваса\n
+	1–2 шт. картофеля\n
+	1 свеклу\n
+	1 морковь\n
+	1–2 свежих огурца\n
+	50–75 г. зеленого лука\n
+	2 яйца\n
+	2 ст. ложки сметаны\n
+	1 чайную ложку сахара\n
+</string>
+
 </resources>
