--- a/app/src/main/res/layout/navdrawer.xml
+++ b/app/src/main/res/layout/navdrawer.xml
@@ -25,7 +25,7 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="210dp"
-                android:background="@drawable/interiorpng"
+                android:background="#c65e25"
                 android:gravity="left|bottom"
                 android:id="@+id/ltDrawerHeader">
                 <TextView
@@ -48,7 +48,6 @@
                     android:layout_height="20dp"
                     android:fontFamily="sans-serif"
                     android:textColor="#E9E9E9"
-                    android:text="Beta - Debug"
                     android:paddingLeft="16dp"
                     android:layout_marginBottom="5dp"
                     android:textSize="15dp"
