--- a/app/src/main/res/layout/card_material_recipe_portion.xml
+++ b/app/src/main/res/layout/card_material_recipe_portion.xml
@@ -22,7 +22,7 @@
 
         android:gravity="center"
         android:fontFamily="sans-serif-medium"
-        android:textSize="15dp"
+        android:textSize="14sp"
         android:textColor="#434343"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
