--- a/app/src/main/res/layout/card_material_recipe_products.xml
+++ b/app/src/main/res/layout/card_material_recipe_products.xml
@@ -7,7 +7,7 @@
         android:layout_height="wrap_content"
         android:text="14"
         android:id="@+id/number_of_products_tv"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:fontFamily="sans-serif-thin"
         android:textColor="#434343"
         android:layout_alignParentTop="true"
@@ -21,7 +21,7 @@
         android:id="@+id/text_ings"
         android:gravity="center"
         android:fontFamily="sans-serif-medium"
-        android:textSize="15dp"
+        android:textSize="14sp"
         android:textColor="#434343"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
