Fixed for preloolipop android
Cards fixed, categories activity fixed.

--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -6,8 +6,8 @@
     android:background="@color/grey">
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="442dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/findedIngsRecyclerView"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.83" />
