--- a/app/src/main/res/layout/activity_list_of_available_recipes.xml
+++ b/app/src/main/res/layout/activity_list_of_available_recipes.xml
@@ -36,7 +36,7 @@
 
         <fragment
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:name="com.nomapp.nomapp_beta.AvailableRecipes.AvlRecipesRecyclerFragment"
             android:id="@+id/fragment"
             android:layout_gravity="center_horizontal"
