--- a/app/src/main/res/layout/card_material_recipe_products.xml
+++ b/app/src/main/res/layout/card_material_recipe_products.xml
@@ -7,7 +7,7 @@
         android:layout_height="wrap_content"
         android:text="14"
         android:id="@+id/number_of_products_tv"
-        android:textSize="50sp"
+        android:textSize="50dp"
         android:fontFamily="sans-serif-thin"
         android:textColor="#434343"
         android:layout_alignParentTop="true"
