--- a/app/src/main/res/layout/activity_all_recipes.xml
+++ b/app/src/main/res/layout/activity_all_recipes.xml
@@ -11,7 +11,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/grey">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -25,7 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/all_recipes_recycler_cont">
+        android:id="@+id/all_recipes_recycler_cont"
+        android:background="@color/grey">
 
         <fragment
             android:layout_width="wrap_content"
