New HelpDialog added.
You will see help message if you first time select ingredient and go to
Start activity.

--- a/app/src/main/res/values/help_messages.xml
+++ b/app/src/main/res/values/help_messages.xml
@@ -3,5 +3,6 @@
     <string name="main_activity_help_msg">Для корректной работы программы советуем один раз потратить немного времени
         и добавить все продукты,
         которые у вас есть, начиная от соли, заканчивая заморожеными овощами.</string>
+    <string name="u_can_swipe_ings_help_msg">Если вам понадобилось удалить продукт из холодильника, просто потяните его в бок! ;)</string>
     <string name="main_activity_msg_title">Караул!</string>
 </resources>
