Database updated. Bug with empty fridge image fixed.

--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -1369,4 +1369,143 @@
 	<item>Морковь и свеклу можно заменить другими вареными овощами, например, репой, цветной капустой.</item>
 </string-array>
 
+<string-array name="grenki">
+	<item>Разбейте яйца в миску и добавьте молока. Если хотите сладкие гренки, можете добавить немного сахара.</item>
+	<item>Взбейте яично-молочную смесь до однородной массы. Обмакивайте ломтики хлеба в массу с обеих сторон</item>
+	<item>Выложите на горячую, смазанную маслом сковороду. Обжаривайте гренки с обеих сторон до образования румяной корочки</item>
+</string-array>
+
+<string-array name="varenaya_katroshka">
+	<item>Очистите, нарежьте кубиками картофель и помойте его.</item>
+	<item>Залейте холодной водой и поставьте на плиту. Включите плиту и подождите когда вода закипит. Снимите пенку (это грязь) и посолите картошку в расчете 1 ч. ложка соли на 1,5 л воды.</item>
+	<item>Варите картошку до готовности. Маленькие кусочки варятся 10 минут, чем крупнее куски – тем дольше варится картофель. Крупный картофель целиком может вариться до 60-80 минут Готовность картошки можно проверить ножом. Для этого надо проткнуть картошку ножом, и он должен легко ее проткнуть.</item>
+	<item>Выключите плиту и слейте воду с картошки. Подавайте со сливочным или растительным маслом, укропом, петрушкой, зеленым луком или другой зеленью, или со сметаной.</item>
+</string-array>
+
+<string-array name="varenye_pelmeni">
+	<item>Налейте воду в 3-х л кастрюлю и вскипятите воду.</item>
+	<item>Посолите кипящую воду 1 ч. ложкой соли, положите 2-3 лаврового листа, перец горошек и хмели-сунели, или киньте 4 бульоных кубика (2 кубика на каждый литр воды), влейте 1-2 ст. ложки растительного масла, чтобы пельмени не слипались.</item>
+	<item>Засыпьте пельмени в кипящую подсоленную воду и перемешайте, чтобы они не слипались. Помешивайте пельмени через 2-3 минуты, пока они не всплывут.</item>
+	<item>Когда пельмени всплыли, поварите их еще 3-5 минут. Подавайте пельмени со сметаной, сливочным маслом, аджикой или хреном.</item>
+</string-array>
+
+<string-array name="kotleti_iz_kurinoy_pecheni">
+	<item>Почистите лук-шалот и морковь. Натрите морковь на крупной терке, мелко нарежьте лук-шалот, куриную печень измельчите в блендере.</item>
+	<item>Соедините все ингридиенты, посолите, поперчите и смешайте в однородный фарш, добавляя сухари до тех пор, пока фарш не начнет лепиться.</item>
+	<item>Сформируйте котлеты. Обжаривайте в растительном масле котлеты с обеих сторон до образования румяной корочки.</item>
+</string-array>
+
+<string-array name="kotleti_iz_krabovih_palochek">
+	<item>Измельчите в блендере крабовые палочки, мелко нарежьте лук-шалот, натрите на крупной терке морковь.</item>
+	<item>Смешайте в однородный фарш измельченные палочки, лук, морковь, яйцо, молоко и панировочные сухари. Посолите и поперчите.</item>
+	<item>Обжаривайте котлеты с обеих сторон до образования корочки.</item>
+</string-array>
+
+<string-array name="sup_iz_kurinogo_farsha">
+	<item>Очистите капусту, морковь, лук и картошку. Если есть терка “Бёрнер”, то нарежьте все овощи на полоски в 3,5 мм толщиной. Если – нет, то: нашинкуйте капусту (на обычной терке естьспециальное лезвие), мелко нарежьте лук, картошку нарежьте кубиками по 5 мм, а марковку натрите на крупной терке.</item>
+	<item>Положите овощи и фарш в 3-х л кастрюлю и залейте 1,5-2 л воды. Хорошо перемешайте, чтобы фарш разошелся и дайте закипеть воде. </item>
+	<item> Когда вода закипит, посолите и приправьте суп. Варите до готовности капусты и картошки, промешивая время от времени, чтобы фарш не слипался в большие комочки. Подавайте с хреном и сметаной.</item>
+</string-array>
+
+<string-array name="kak_varit_makaroni">
+	<item>Обычно на упаковках из-под макарон пишут как их приготовить. Мелкие изделия варятся от 3-5 минут, средние 7-9 минут, крупные 12-15 минут. Но есть некоторые правила, которые не всегда пишут.</item>
+	<item>Возьмите 5 л кастрюлю, налейте 4 л воды, доведите воду до кипения (вода должна сильно бурлить), посолите, приправьте (приправой для макарон, или базиликом, или укропом с петрушкой), добавьте 2 ст. ложки растительного масла (чтобы макароны при варки не слипались) и положите, помешивая, упаковку макарон (400-500 гр.).</item>
+	<item>При варке помешивайте макароны, чтобы они не слипались и не прилипали к кастрюле. Когда вода с макоронами закипит, потавьте мощность плиты на половину и варите макароны до готовности (3-15 минут, в зависимости от типа макарон).</item>
+	<item>Готовые макароны откиньте на дуршлаг и промойте водой, чтобы смыть клейковину. Можете промывать горячей, чтобы макароны быстро не остыли.</item>
+	<item>Выложите макароны на тарелку и подавайте со сливочным или оливковым маслом и кетчупом.</item>
+</string-array>
+
+<string-array name="yaichnitsa_s_pomidorami_i_sosiskami">
+	<item>Нарежьте сосиски кружочками и обжарьте с обеих сторон на сковороде. Нарежьте помидоры кружочками, выложите их поверх сосисок и залейте яйцами (рекомендую желтки проткнуть, чтобы прожарились).</item>
+	<item>Пусть яичница прожарица на половину, затем приправьте арабской приправой и перемешайте. Готовую яичницу выложите на блюдо и украсьте зеленым луком.</item>
+</string-array>
+
+<string-array name="tvorog_dieticheskiy">
+	<item>К 1 л полноценного или обезжиренного молока добавьте 1 л кислого молока и дайте постоять в тепле. </item>
+	<item>Через 10 минут молоко свернется и полученный творог можно откинуть на сито. Диетический творог можно использовать как обычный пищевой творог.</item>
+</string-array>
+
+<string-array name="salat_iz_ogurtsov_i_yaits">
+	<item>Натрите огурцы на крупной терке или нарежьте мелкими кубиками.</item>
+	<item>Очистите яйца и натрите также на крупной терке или порубите их ножом. </item>
+	<item>Нарежьте маслины кольцами и смешайте все ингридиенты с майонезом.</item>
+</string-array>
+
+<string-array name="makarono_po_flotski_s_kukuruzoy_i_kapustoy">
+	<item>Отварите макароны в кипящей подсоленной воде с 2 ст. ложками растительного масла (так макароны не слипаются) до готовности (5-12 минут, смотрите на упаковке)</item>
+	<item>Слейте с макарон воду и выложите на сковороду вместе с размятой вилкой тушенокой.</item>
+	<item>Обжарьте минут 5 и выложите на тарелку. Нарежьте мелко капусту и добавьте к макаронам по-флотски кукурузу с капустой и все перемешайте.</item>
+</string-array>
+
+<string-array name="salat_pikantniy">
+	<item>Пропустите чеснок через пресс, нарубите или натрите на крупной терке варенные яйца, добавьте тертый сыр, нарубленную зелень и смешайте все с майонезом.</item>
+</string-array>
+
+<string-array name="farshirovanye_yaytsa">
+	<item>Разрежьте яйца на половинки и выньте желтки.</item>
+	<item>Разомните желтки вилкой, добавьте тертый сыр, нарезанные маслины, измельченный чеснок и смешайте все с майонезом. </item>
+	<item>Напоните белки этим фаршем и подавайте.</item>
+</string-array>
+
+<string-array name="sosiski_s_sirom">
+	<item>Сосиски надрежьте глубоко вдоль, наполните надрезы пластинками сыра или тертым сыром, оберните каждую сосиску ломтиком бекона и закрепите зубочисткой.</item>
+	<item>Положите сосиски на блюдо и готовьте в микроволновой печи 1,5-2 минуты на максимальной мощности. (Не забудьте закрыть колпаком – отмывать микроволновку будет потом сложно, да и сосиски подсохнут)</item>
+</string-array>
+
+<string-array name="salat_kubik_rubik">
+	<item>Нарежьте перец, помидоры, сыр и ветчину кубиками одинакового размера, заправьте майонезом и перемешайте.</item>
+</string-array>
+
+<string-array name="salat_iz_svekli_s_krab_palochkami">
+	<item>Свеклу помойте и отварите до готовности. Затем очистите свеклу и натрите на крупной терке.</item>
+	<item>Яйца и крабовые палочки нарежьте крупными кубиками и перемешайте со свеклой.</item>
+	<item>Натрите сыр на крупной терке и добавьте в салат.</item>
+	<item>Заправьте салат из свеклы и крабовых палочем майонезм, толченным чесноком и солью, тщательно перемешайте и украсьте зеленью.</item>
+</string-array>
+
+<string-array name="tvorojno_kartofelnie_palchiki">
+	<item>Разотрите творог с вареным картофелем, добавьте яйцо, соль и муки (муки столько, чтобы получилось мягкое эластичное тесто). </item>
+	<item>Замесите тесто, сформируйте из теста колбаски, как пальчики и отварите их в подсоленной кипящей воде. </item>
+	<item> Как только пальчики всплывут, выньте их шумовкой, переложите на тарелку и полейте растопленным сливочным маслом и сметаной.</item>
+</string-array>
+
+<string-array name="uha_jeltaya_s_lososem">
+	<item>Лосося почистите, выпотрошите и нарежьте на большие куски.</item>
+	<item>Положите лосось в кастрюлю.</item>
+	<item>Добавьте очищенные и нарезанные картофель и морковь (или возьмите замороженный). Залейте кипятком, дайте закипеть и варите 10-15 минут.</item>
+	<item>Посолите, добавьте специи, а рыбу разломайте на куски (в кастрюле это лучше сделать деревянной лопаткой или можете вынуть куски рыбы, разрезать их на доске и положить обратно в уху). Поварите еще минут 5-10.</item>
+</string-array>
+
+<string-array name="salat_iz_pomidorov_i_ogurtsov">
+	<item>Нарежьте свежий огурец и помидоры кубиками, посолите, заправьте 2 ст. ложками сметаны или растительного масла.</item>
+	<item>В этот салат хорошо добавлять нарубленную зелень петрушки и укропа, мелко нарезанный репчатый лук и 1-2 ст. ложки какого-нибудь сока (он всегда даст неповторимый вкус салат, а никто из гостей так и не поймет почему такой обычный салат всегда различен на вкус).</item>
+</string-array>
+
+<string-array name="svekolniy_salat_s_chesnokom_i_ogurtsom">
+	<item>Натрите на крупной терке свеклу и свежий огурец, ножом нарубите грецкие орехи.</item>
+	<item>Нтрите на мелкой терке или пропустите через пресс чеснок, добавьте сметану и все хорошо перемешайте.</item>
+</string-array>
+
+<string-array name="kartofelnie_galushki">
+	<item>Из отварного картофеля, муки, крахмала, яиц, соли и мускатного ореха замесите тесто.</item>
+	<item>Раскатайте тесто в пласт толщиной 5 мм и нарежьте полосками шириной 8 см. </item>
+	<item>Готовьте галушки в пароварке 20 минут, подавайте с горячим маслом и посыпанными рубленной зеленью.</item>
+</string-array>
+
+<string-array name="goryachiy_buterbrod_s_yaytsom_i_zeleniu">
+	<item>Натрите плавленный сырок (50 гр.) на крупной терке, добавьте к нему яйцо, мелко нарезанный лук, зелень и выдавленный чеснок.</item>
+	<item>Намажьте ломтики батона или хлеба полученной массой и обжарьте бутерброды на сковороде в растительном масле, сначала намазанной массой вниз, а потом вверх.</item>
+</string-array>
+
+<string-array name="file_ciplenka_kak_jarit">
+	<item>400 гр. филе цыпленка промойте, слегка отбейте молотком, сделайте несколько надрезов и посыпьте солью и приправами.</item>
+	<item>усть пропитается в течении 30 минут.</item>
+	<item>Разогрейте на сковороде растительное масло, выложите филе и обжаривайте с обеих сторон до готовности.</item>
+</string-array>
+
+<string-array name="buterbrodi_zelenie_s_kartofelem">
+	<item>Приготовьте массу: натрите сырой картофель на крупной терке, добавьте яйцо, мелко нарезанный репчатый лук и нарубленную зелень (крапива, укроп или другая весенняя зелень).</item>
+	<item>Намажьте тонким слоем этой смесью ломтики хлеба или батона, обжарьте с обеих сторон, выкладывая начинкой вниз.</item>
+</string-array>
+
 </resources>
