--- a/app/src/main/res/values/number_of_ingridients_for_recipes.xml
+++ b/app/src/main/res/values/number_of_ingridients_for_recipes.xml
@@ -1560,4 +1560,194 @@
 	1 чайную ложку сахара\n
 </string>
 
+<string name="number_of_ingredients_for_grenki">
+	Яйца - 2\n
+	Молоко - 4 ст.л.\n
+	Батон - 5 ломников\n
+</string>
+
+<string name="number_of_ingredients_for_varenaya_katroshka">
+	Картофель - по вкусу\n
+	Соль\n
+</string>
+
+<string name="number_of_ingredients_for_varenye_pelmeni">
+	Пельмени - 1 кг\n
+	Лавровый лист - по вкусу\n
+	Соль - по вкусу\n
+	Суповая приправа - по вкусу\n
+	Перец горощком - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_kotleti_iz_kurinoy_pecheni">
+	Куриная печень - 500 г.\n
+	Яйцо - 1\n
+	\n
+	Молоко - 2 ст.л.\n
+	Лук-шалот - 1\n
+	Морковь - 1\n
+	Сухари панировочные\n
+	Соль\n
+	Перец\n
+</string>
+
+<string name="number_of_ingredients_for_kotleti_iz_krabovih_palochek">
+	Крабовые палочки - 150-200г.\n
+	Лук-шалот - 1\n
+	Морковь - 1\n
+	Яйцо - 1\n
+	Молоко - 2-3 ст.л.\n
+	Панировочные сухари - по вкусу\n
+	Соль - по вкусу\n
+	Перец - по вкусу\n
+	Масло растительное - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_sup_iz_kurinogo_farsha">
+	Фарш куриный - 200г.\n
+	Морковь - 1 шт.\n
+	Лук - 1 штю\n
+	Картофель - 5-6 шт.\n
+	Вермишель - 50 г.\n
+	Капуста - 200 г.\n
+	Соль - по вкусу\n
+	Специи для супа (перец, лавр. лист и т.л.) - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_kak_varit_makaroni">
+	Макароны - по вкусу\n
+	Приправы - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_yaichnitsa_s_pomidorami_i_sosiskami">
+	Яйца - 6 шт.\n
+	Сосиски - 250 гр.\n
+	Помидоры - 2-3 шт.\n
+	Арабская приправа - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_tvorog_dieticheskiy">
+	Молоко - 1 л.\n
+	Молоко кислое - 1 л.\n
+</string>
+
+<string name="number_of_ingredients_for_salat_iz_ogurtsov_i_yaits">
+	Огурцы средние - 2-3 шт.\n
+	Яйца вареные - 3-4 шт.\n
+	Маслины - 50 г.\n
+	Майонез - 100 г.\n
+</string>
+
+<string name="number_of_ingredients_for_makarono_po_flotski_s_kukuruzoy_i_kapustoy">
+	Макароны (желательно спагетти) -  250 г.\n
+	Тушенка - 200 г.\n
+	Кукуруза консерварованная - 100 г.\n
+	Китайская (пекинская) капуста - 4 листа\n
+</string>
+
+<string name="number_of_ingredients_for_salat_pikantniy">
+	Сыр тертый - 100-150 г.\n
+	Майонез - 200 г.\n
+	Вареные яйца - 4 шт.\n
+	Чеснок - 2-3 зубчика\n
+	Укроп - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_farshirovanye_yaytsa">
+	Вареные яйца - 10 шт\n
+	Маслины - по вкусу\n
+	Сыр тертый - 5-10 г.\n
+	Майонез - 1-3 ч.л.\n
+	Чеснок - 1 зубчи\n
+</string>
+
+<string name="number_of_ingredients_for_sosiski_s_sirom">
+	Сосиски или сардельки - 8 шт.\n
+	Сыр твердый - 120 г.\n
+	Бекон или капченая грудинка - 250-300 г.\n
+</string>
+
+<string name="number_of_ingredients_for_salat_kubik_rubik">
+	Красный сладкий перец - 200 г.\n
+	Помидоры - 200 г.\n
+	Сыр - 200 г.\n
+	Ветчина (колбаса и т.д.)  - 200 г.\n
+	Майонез - 200 г.\n
+</string>
+
+<string name="number_of_ingredients_for_salat_iz_svekli_s_krab_palochkami">
+	Свакла (средняя) - 2 шт.\n
+	Крабовые палочки - 200 гю\n
+	Яйца вареные - 3 шт.\n
+	Сыр - 100 г.\n
+	Майонез - по вкусу\n
+	Соль - по вкусу\n
+	Чеснок - 1-2 зубчика\n
+</string>
+
+<string name="number_of_ingredients_for_tvorojno_kartofelnie_palchiki">
+	Творог - 300 г.\n
+	Картофель - 2 шт.\n
+	Яйцо - 1 шт.\n
+	Соль - по вкусу\n
+	Мука - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_uha_jeltaya_s_lososem">
+	Лосось - 500 г.\n
+	Картофель - 300 г.\n
+	Морковь - 200 г.\n
+	Соль, карри, лавровый лист, перец - по вкусу\n
+	Приправа для картошки - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_salat_iz_pomidorov_i_ogurtsov">
+	Огурцы - по вкусу\n
+	Помидоры - по вкусу\n
+	Сметана или растительное масло - по вкусу\n
+	Соль - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_svekolniy_salat_s_chesnokom_i_ogurtsom">
+	Вареная свекла - 500 г.\n
+	Огурец свежий - 1 шт.\n
+	Сметана - 1-2 ст.л.\n
+	Чеснок - 3 зубчика\n
+	Ядра грецких орехов (на любителя) - 6 шт.\n
+</string>
+
+<string name="number_of_ingredients_for_kartofelnie_galushki">
+	Картофель - 750 г.\n
+	Крахмал - 100 г.\n
+	Мука - 120 г.\n
+	Яйца - 2 шт.\n
+	Мускатный орех - по вкусу\n
+	Масло сливочное - 3 0г.\n
+	Соль - по вкусу\n
+	Зелень петрушки - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_goryachiy_buterbrod_s_yaytsom_i_zeleniu">
+	Сыр плавленый\n
+	Батон или хлеб\n
+	Яйцо\n
+	Чеснок\n
+	Зелень\n
+	Любые добавки ;)\n
+</string>
+
+<string name="number_of_ingredients_for_file_ciplenka_kak_jarit">
+	Филе цыпленка - 400 г.\n
+	Соль, приправы - по вкусу\n
+	Масло подсолнечное - по вкусу\n
+</string>
+
+<string name="number_of_ingredients_for_buterbrodi_zelenie_s_kartofelem">
+	Хлеб (батон)\n
+	Картофель\n
+	Лук\n
+	Зелень\n
+	Все, что угодно ;)\n
+</string>
+
 </resources>
